# ssa-analysis

./: .gitignore  main.py  pyproject.toml
configs/: data.yaml
src/: config.py
src/acquisition/: catalog.py  client.py  fetch.py
src/io/: excel.py
src/maneuver_detection/: compare.py  discrete_kalman_filter.py  mean_longitude_filter.py
src/scripts/: pull_data.py
src/ssa/: orbital.py
src/storage/: excel.py  parquet.py
src/viz/: __init__.py  time-series.py  time_series.py
