[project]
name = "ssa-analysis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "spacetrack==1.4.0",
  "pyarrow>=15",          # Parquet
  "pandas>=2",
  "pydantic-settings>=2",
  "pyyaml>=6", # config typée
  "openpyxl>=3.1.5",
]

[project.optional-dependencies]
ml  = ["torch>=2.2", "numpy", "scikit-learn"]   
viz = ["matplotlib>=3.8", "xlsxwriter", "openpyxl"]
dev = ["pytest", "ruff", "pandera"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
